boltffi_backend/tests/jni/snapshots/jni__native_methods__jni_bridge_renders_custom_type_functions_as_byte_arrays.snap
---
source: boltffi_backend/tests/jni/native_methods.rs
expression: "rendered_fixture(\"exports/custom_type_functions\")"
---
===== jni/demo.h =====
<c abi support declarations>
FfiBuf_u8 boltffi_function_demo_keep_timestamp(const uint8_t *value_ptr, uintptr_t value_len);

===== jni/jni_glue.c =====
<jni source includes>
<jni exception helpers>
<jni byte-array helpers>
JNIEXPORT jbyteArray JNICALL Java_com_boltffi_demo_Native_boltffi_1function_1demo_1keep_1timestamp(JNIEnv *env, jclass cls, jbyteArray value) {
    (void)cls;

    jbyte *__boltffi_value_ptr = NULL;
    jsize __boltffi_value_len = 0;

    if (value == NULL) {
        boltffi_jni_throw_illegal_argument(env, "BoltFFI array argument was null");
        goto __boltffi_error;
    }
    __boltffi_value_len = (*env)->GetArrayLength(env, value);
    __boltffi_value_ptr = (*env)->GetByteArrayElements(env, value, NULL);
    if (__boltffi_value_ptr == NULL) {
        goto __boltffi_error;
    }

    (void)env;
    FfiBuf_u8 __boltffi_result = boltffi_function_demo_keep_timestamp((const uint8_t *)__boltffi_value_ptr, (uintptr_t)__boltffi_value_len);

    if (__boltffi_value_ptr != NULL) {
        (*env)->ReleaseByteArrayElements(env, value, __boltffi_value_ptr, JNI_ABORT);
        __boltffi_value_ptr = NULL;
    }

    return boltffi_jni_buffer_to_byte_array(env, __boltffi_result);
__boltffi_error:
    if (__boltffi_value_ptr != NULL) {
        (*env)->ReleaseByteArrayElements(env, value, __boltffi_value_ptr, JNI_ABORT);
        __boltffi_value_ptr = NULL;
    }
    return NULL;
}
