boltffi_backend/tests/jni/snapshots/jni__native_methods__jni_bridge_renders_direct_records_and_c_style_enums.snap
---
source: boltffi_backend/tests/jni/native_methods.rs
expression: "rendered_fixture(\"exports/direct_records_and_c_style_enums\")"
---
===== jni/demo.h =====
<c abi support declarations>
typedef struct {
    int32_t x;
    int32_t y;
} ___Point;
typedef uint8_t ___Mode;
#define MODE_FAST ((___Mode)1)
#define MODE_SLOW ((___Mode)2)
___Point boltffi_function_demo_echo_point(___Point point);
___Mode boltffi_function_demo_echo_mode(___Mode mode);

===== jni/jni_glue.c =====
<jni source includes>
<jni exception helpers>
<jni record helpers>
JNIEXPORT jbyteArray JNICALL Java_com_boltffi_demo_Native_boltffi_1function_1demo_1echo_1point(JNIEnv *env, jclass cls, jbyteArray point) {
    (void)cls;

    ___Point __boltffi_point_value;

    if (!boltffi_jni_read_record(env, point, (uintptr_t)sizeof(___Point), &__boltffi_point_value)) {
        goto __boltffi_error;
    }

    (void)env;
    ___Point __boltffi_result = boltffi_function_demo_echo_point(__boltffi_point_value);

    return boltffi_jni_record_to_byte_array(env, &__boltffi_result, (uintptr_t)sizeof(__boltffi_result));
__boltffi_error:
    return NULL;
}

JNIEXPORT jbyte JNICALL Java_com_boltffi_demo_Native_boltffi_1function_1demo_1echo_1mode(JNIEnv *env, jclass cls, jbyte mode) {
    (void)cls;

    (void)env;
    ___Mode __boltffi_result = boltffi_function_demo_echo_mode((___Mode)mode);

    return (jbyte)__boltffi_result;
}
